shopware-k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopware-ingress
  namespace: shopware
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: shopware.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopware
                port:
                  number: 80
